--- a/index.html
+++ b/index.html
@@ -3,14 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team Pod Page</title>
+    <title>My Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>Welcome to Our Team Pod Page</h1>
-    <p>This page showcases our team's projects and updates.</p>
-    <ul>
-        <li><a href="project1.html">Project 1</a></li>
-        <li><a href="project2.html">Project 2</a></li>
-    </ul>
+    <header>
+        <h1>My Portfolio</h1>
+        <nav>
+            <a href="#about">About Me</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <div class="container">
+        <section id="about" class="section">
+            <h2>About Me</h2>
+            <p>Hello! I'm [Your Name], a passionate developer with experience in [Your Skills]. I enjoy creating innovative solutions, learning new technologies, and contributing to impactful projects. Welcome to my portfolio!</p>
+        </section>
+
+        <section id="projects" class="section">
+            <h2>Projects</h2>
+            <div class="projects">
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/300" alt="Project 1">
+                    <div class="content">
+                        <h3>Project 1</h3>
+                        <p>A brief description of the project. Showcase your role and the technologies used.</p>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/300" alt="Project 2">
+                    <div class="content">
+                        <h3>Project 2</h3>
+                        <p>A brief description of the project. Showcase your role and the technologies used.</p>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="https://via.placeholder.com/300" alt="Project 3">
+                    <div class="content">
+                        <h3>Project 3</h3>
+                        <p>A brief description of the project. Showcase your role and the technologies used.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="section">
+            <h2>Contact</h2>
+            <p>If you'd like to get in touch, feel free to email me at <a href="mailto:yourname@example.com">yourname@example.com</a> or connect with me on <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>.</p>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 [Your Name]. Built with HTML, CSS, and JavaScript.</p>
+    </footer>
 </body>
 </html>
