--- a/index.html
+++ b/index.html
@@ -20,8 +20,18 @@
     <div class="container">
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>Hello! I'm [Your Name], a passionate developer with experience in [Your Skills]. I enjoy creating innovative solutions, learning new technologies, and contributing to impactful projects. Welcome to my portfolio!</p>
+            <p>
+                Hello! I'm Worasak Sriworawiboon, a passionate developer with diverse experience in software development and IT solutions. I enjoy creating innovative solutions, learning new technologies, and contributing to impactful projects. Welcome to my portfolio!
+            </p>
+            <h3>Skills</h3>
+            <ul>
+                <li><strong>Programming Languages:</strong> PHP, JavaScript, Kotlin (Layouts XML), Swift (Storyboard), Dart (Beginner), NodeJS, Python (Beginner), C#, ASP.NET, VB.NET</li>
+                <li><strong>Frameworks and Tools:</strong> HTML, CSS, MySQL, Android Studio, Flutter, Google Cloud, Flask, JWT (JSON Web Tokens), Basic Auth, Xcode, Bootstrap, SOAP, Laravel, Express, Socket.IO</li>
+                <li><strong>Development Tools:</strong> VS Code, Visual Studio, Postman, Swagger, IIS, Xampp, Jira, Toad (Oracle), Git</li>
+                <li><strong>Specialized Skills:</strong> Push Notifications, Google Maps API Integration</li>
+            </ul>
         </section>
+        
 
         <section id="projects" class="section">
             <h2>Projects</h2>
@@ -52,12 +62,12 @@
 
         <section id="contact" class="section">
             <h2>Contact</h2>
-            <p>If you'd like to get in touch, feel free to email me at <a href="mailto:yourname@example.com">yourname@example.com</a> or connect with me on <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>.</p>
+            <p>If you'd like to get in touch, feel free to email me at <a href="mailto:yourname@example.com">worasak.sriworawiboon@gmail.com</a></p>
         </section>
     </div>
 
     <footer>
-        <p>&copy; 2024 [Your Name]. Built with HTML, CSS, and JavaScript.</p>
+        <p>&copy; 2024 [Worasak Sriworawiboon]. Built with HTML, CSS, and JavaScript.</p>
     </footer>
 </body>
 </html>
