--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
                                 <span class="tech-tag">PHP</span>
                                 <span class="tech-tag">Soap</span>
                             </div>
-                            <div class="project-links">
+                            <!-- <div class="project-links">
                                 <a href="#" class="project-link">Live Demo →</a>
                                 <a href="#" class="project-link">GitHub →</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
@@ -204,10 +204,10 @@
                                 <span class="tech-tag">Socket.IO</span>
                                 <span class="tech-tag">Kotlin</span>
                             </div>
-                            <div class="project-links">
+                            <!-- <div class="project-links">
                                 <a href="#" class="project-link">Live Demo →</a>
                                 <a href="#" class="project-link">GitHub →</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
@@ -233,10 +233,10 @@
                                 <span class="tech-tag">Swift</span>
                                 <span class="tech-tag">Kotlin</span>
                             </div>
-                            <div class="project-links">
+                            <!-- <div class="project-links">
                                 <a href="#" class="project-link">Live Demo →</a>
                                 <a href="#" class="project-link">GitHub →</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
@@ -268,10 +268,10 @@
                                 <span class="tech-tag">Laravel</span>
                                 <span class="tech-tag">Restful</span>
                             </div>
-                            <div class="project-links">
+                            <!-- <div class="project-links">
                                 <a href="#" class="project-link">Live Demo →</a>
                                 <a href="#" class="project-link">GitHub →</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
@@ -308,10 +308,10 @@
                                 <span class="tech-tag">PHP</span>
                                 <span class="tech-tag">Laravel</span>
                             </div>
-                            <div class="project-links">
+                            <!-- <div class="project-links">
                                 <a href="#" class="project-link">Live Demo →</a>
                                 <a href="#" class="project-link">GitHub →</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
@@ -367,10 +367,10 @@
                                 <span class="tech-tag">Kotlin</span>
                                 <span class="tech-tag">Java</span>
                             </div>
-                            <div class="project-links">
+                            <!-- <div class="project-links">
                                 <a href="#" class="project-link">Live Demo →</a>
                                 <a href="#" class="project-link">GitHub →</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
