--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                             <div class="skill-item">Google Maps</div>
                             <div class="skill-item">JWT</div>
                             <div class="skill-item">Basic Auth</div>
+                            <div class="skill-item">AWS (EC2 , Route 53)</div>
                         </div>
                         
                     </section>
