Add Video MedImage

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                         <div class="project-links">
                             <!-- <a href="#">Live Demo</a> -->
                             <!-- <a href="#">Source Code</a> -->
+                            <a href="javascript:void(0)" onclick="openModalVideo('public/video/medimage_opd.mp4')">Play Video</a>
                         </div>
                     </div>
                 </div>
