--- a/index.html
+++ b/index.html
@@ -369,15 +369,15 @@
                         <p class="project-description">A full-stack web application with dynamic features.</p>
                         <div class="project-links">
                             <!-- <a href="#">Live Demo</a> -->
-                            <a href="https://github.com/wsk-24/MergeX_Watermark.git" target="_blank">GitHub</a>
+                            <!-- <a href="https://github.com/wsk-24/MergeX_Watermark.git" target="_blank">GitHub</a> -->
                         </div>
                     </div>
                 </div>
                 <div class="project-card">
                     <div class="gallery">
-                        <div class="gallery-item">
+                        <!-- <div class="gallery-item">
                             <img src="public/img/projects/emr1.jpg" width="300" height="200" alt="Image 1">
-                        </div>
+                        </div> -->
                        
                     </div>
                     <div class="project-content">
@@ -396,7 +396,7 @@
 
                         <div class="project-links mt-2">
                             <!-- <a href="#">Live Demo</a> -->
-                            <a href="https://github.com/wsk-24/MergeX_Watermark.git" target="_blank">GitHub</a>
+                            <!-- <a href="https://github.com/wsk-24/MergeX_Watermark.git" target="_blank">GitHub</a> -->
                         </div>
 
                         
@@ -425,7 +425,7 @@
                         <p class="project-description">Complaint Notification System: Management of Anti-Corruption Civil Society Network System.</p>
                         <div class="project-links">
                             <!-- <a href="#">Live Demo</a> -->
-                            <a href="https://github.com/wsk-24/MergeX_Watermark.git" target="_blank">GitHub</a>
+                            <!-- <a href="https://github.com/wsk-24/MergeX_Watermark.git" target="_blank">GitHub</a> -->
                         </div>
                     </div>
                 </div>
@@ -454,7 +454,7 @@
                         <p class="project-description">For personnel to assess themselves based on their job roles and status during the evaluation period, and to be able to check the status of their evaluation.</p>
                         <div class="project-links">
                             <!-- <a href="#">Live Demo</a> -->
-                            <a href="https://github.com/wsk-24/MergeX_Watermark.git" target="_blank">GitHub</a>
+                            <!-- <a href="https://github.com/wsk-24/MergeX_Watermark.git" target="_blank">GitHub</a> -->
                         </div>
                     </div>
                 </div>
