Add Image Project Tele

--- a/index.html
+++ b/index.html
@@ -375,15 +375,30 @@
                 </div>
                 <div class="project-card">
                     <div class="gallery">
-                        <!-- <div class="gallery-item">
-                            <img src="public/img/projects/emr1.jpg" width="300" height="200" alt="Image 1">
-                        </div> -->
-                       
+                        <div class="gallery-item">
+                            <img src="public/img/projects/tele1.jpg" width="300" height="200" alt="Image 1">
+                        </div>
+                        <div class="gallery-item">
+                            <img src="public/img/projects/tele2.jpg" width="300" height="200" alt="Image 1">
+                        </div>
+                        <div class="gallery-item">
+                            <img src="public/img/projects/tele3.jpg" width="300" height="200" alt="Image 1">
+                        </div>
+                        <div class="gallery-item">
+                            <img src="public/img/projects/tele4.jpg" width="300" height="200" alt="Image 1">
+                        </div>
+                        <div class="gallery-item">
+                            <img src="public/img/projects/tele5.jpg" width="300" height="200" alt="Image 1">
+                        </div>
+                        <div class="gallery-item">
+                            <img src="public/img/projects/tele6.jpg" width="300" height="200" alt="Image 1">
+                        </div>
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Tele Conference (Demo)</h3>
                         <div class="project-tags">
                             <span class="project-tag">Kotlin</span>
+                            <span class="project-tag">Node.js</span>
                         </div>
                         <p class="project-description">A connect to the video conference API service to enable doctors and patients to communicate via video conference.</p>
 
