--- a/index.html
+++ b/index.html
@@ -271,6 +271,10 @@
 									<img src="images/icons/c_sharp.png" alt="C#">
 									<span>C#</span> <!-- Specify "Basic" -->
 								</div>
+								<div class="skill-item">
+									<img src="images/icons/python.png" alt="React">
+									<span>Python (Basic)</span> <!-- Specify "Basic" -->
+								</div>
 							</div>
 						</div>
 						
