--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 							
 						</div>
 						<div class="image">
-							<img src="images/picture.jpg" alt="" />
+							<img src="images/picture.png" alt="" />
 						</div>
 					</section>
 
